--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@next/font": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.58.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.13.0",
+    "@types/react": "18.0.1",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^4.9.5"
   }
 }
